--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,9 +32,6 @@ p {
   margin: 0;
 }
 
-// img {
-//   max-width: 100%;
-// }
 
 .adapt-menu {
   display: none;
@@ -104,7 +101,6 @@ body {
   }
   &_menu {
     display: flex;
-    margin-right: 10rem;
   }
   &_items {
     list-style: none;
@@ -112,9 +108,6 @@ body {
     flex-wrap: wrap;
     & li {
       margin-right: 39px;
-      &:last-child {
-        margin-right: 0;
-      }
       & a {
         text-transform: uppercase;
         text-decoration: none;
@@ -195,10 +188,12 @@ body {
         font-size: 2.8rem;
         font-family: KozGoPro_Bold;
         margin: 0;
+        text-shadow: 2px 2px $text-color;
       }
       & h2 {
         font-size: 1.7rem;
         margin: 0;
+        text-shadow: 2px 2px $text-color;
       }
       & a {
         text-decoration: none;
