--- a/scss/style.css
+++ b/scss/style.css
@@ -125,6 +125,17 @@
         -ms-flex-align: center;
             align-items: center;
   }
+  .company_1-item2_content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .company_1-item2_content-line {
+    display: none;
+  }
+  .company_1-item2_content-text {
+    text-align: center;
+  }
 }
 
 button:focus,
@@ -1013,5 +1024,148 @@ body {
   color: #cacbcc;
   text-transform: uppercase;
   font-family: KozGoPro_Bold;
+}
+
+.top-page {
+  background: url(/img/top-img.png), -webkit-gradient(linear, left top, right top, from(#00aced), to(#dadc55));
+  background: url(/img/top-img.png), linear-gradient(0.25turn, #00aced, #dadc55);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  margin-bottom: 100px;
+}
+
+.top-page h1 {
+  font-size: 36px;
+  text-transform: uppercase;
+  font-family: KozGoPro_Regular;
+}
+
+.top-page h3 {
+  font-size: 22px;
+}
+
+.company_1 {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  padding: 60px 40px;
+  margin-bottom: 60px;
+  border-bottom: 3px solid #00aced;
+}
+
+.company_1-item img {
+  max-height: 400px;
+  max-width: 415px;
+  padding-right: 40px;
+  padding-bottom: 30px;
+  float: left;
+}
+
+.company_1-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #00aced;
+}
+
+.company_1-item-content hr {
+  opacity: 0.5;
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.company_1-item-content p {
+  font-family: KozGoPro_Bold;
+  line-height: 1.9;
+  margin-bottom: 40px;
+}
+
+.company_1-item2 h1 {
+  color: #00aced;
+  font-family: KozGoPro_Bold;
+}
+
+.company_1-item2_content {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.company_1-item2_content img {
+  margin-right: 20px;
+  margin-bottom: 40px;
+}
+
+.company_1-item2_content-line {
+  width: 2px;
+  height: 80px;
+  background-color: black;
+  opacity: 0.1;
+  margin-right: 20px;
+}
+
+.company_1-item2_content-text p {
+  font-size: 20px;
+  font-family: KozGoPro_Regular;
+}
+
+.company_1-item2_content-text p span a {
+  color: #00aced;
+  text-decoration: none;
+}
+
+.company_2 {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  padding: 60px 40px;
+  margin-bottom: 60px;
+  border-bottom: 3px solid #b1d518;
+}
+
+.company_2 h1 {
+  text-align: center;
+  color: #b1d518;
+  font-family: KozGoPro_Regular;
+}
+
+.company_2 h3 {
+  font-size: 22px;
+  color: #b1d518;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.company_2-item {
+  text-align: center;
+}
+
+.company_2-item img {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.company_2-item p {
+  margin-bottom: 40px;
+  line-height: 2;
 }
 /*# sourceMappingURL=style.css.map */
