--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
     font-family: KozGoPro_Bold;
-    src: url('font/KozGoPro-Bold.otf');
+    src: url('../font/KozGoPro-Bold.otf');
 }
 
 @font-face {
     font-family: KozGoPro_Heavy;
-    src: url('font/KozGoPro-Heavy.otf');
+    src: url('../font/KozGoPro-Heavy.otf');
 }
 
 @font-face {
     font-family: KozGoPro_Light;
-    src: url('font/KozGoPro-Light.otf');
+    src: url('../font/KozGoPro-Light.otf');
 }
 
 @font-face {
     font-family: KozGoPro_Medium;
-    src: url('font/KozGoPro-Medium.otf');
+    src: url('../font/KozGoPro-Medium.otf');
 }
 
 @font-face {
     font-family: KozGoPro_Regular;
-    src: url('font/KozGoPro-Regular.otf');
+    src: url('../font/KozGoPro-Regular.otf');
 }
