--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,6 @@ p {
   margin: 0;
 }
 
-
 .adapt-menu {
   display: none;
 }
@@ -48,26 +47,44 @@ p {
   font-weight: 700;
   &-red {
     background-color: $red-color;
-    color: #fff;
-    font-size: 25px;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+  &-green {
+    background-color: rgb(177, 213, 24);
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+  &-yellow {
+    background-color: rgb(255, 167, 33);
+    &:hover {
+      opacity: 0.5;
+    }
   }
   &-white {
     background-color: #fff;
-    width: 250px;
-    font-size: 24px;
-    color: $red-color;
-    text-align: center;
-    font-family: KozGoPro_Medium;
     &:hover {
       opacity: 0.5;
     }
   }
   &-primary {
     background-color: $primary;
-    width: 130px;
-    margin-bottom: 30px;
     &:hover {
-      background-color: lighten($primary, 2%);
+      opacity: 0.5;
+    }
+  }
+  &-grey {
+    background-color: rgb(21, 32, 4);
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+  &-orange {
+    background-color: #ff5000;
+    &:hover {
+      opacity: 0.5;
     }
   }
 }
@@ -514,12 +531,16 @@ body {
             text-transform: none;
           }
         }
+        a {
+          width: 130px;
+          margin-bottom: 30px;
+        }
       }
     }
   }
   //   Block5
   &-block5 {
-    background-image: url(/img/block5/block5-bg.png);
+    background-image: url(../img/block5/block5-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 70px;
@@ -561,10 +582,21 @@ body {
           line-height: 1.75;
           margin-bottom: 2rem;
         }
+        a {
+          width: 130px;
+          margin-bottom: 30px;
+        }
       }
     }
     &-btn {
       text-align: center;
+      a {
+        width: 250px;
+        font-size: 24px;
+        color: $red-color;
+        text-align: center;
+        font-family: KozGoPro_Medium;
+      }
     }
   }
   //   Block 6
@@ -659,6 +691,10 @@ body {
     &-btn {
       text-align: center;
       margin-top: 25px;
+      a {
+        font-size: 25px;
+        color: #fff;
+      }
     }
   }
 }
@@ -666,7 +702,7 @@ body {
 // footer
 .footer {
   padding: 90px 30px 40px 30px;
-  background-image: url(img/footer-bg.png);
+  background-image: url(../img/footer-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
@@ -677,7 +713,7 @@ body {
     margin-bottom: 25px;
   }
   & li {
-      margin-bottom: 14px;
+    margin-bottom: 14px;
   }
   a {
     color: #929497;
@@ -693,27 +729,28 @@ body {
     margin-bottom: 20px;
   }
   &_menu {
+    display: flex;
+    flex-direction: column;
+    & a {
       display: flex;
-      flex-direction: column;
-      & a {
-          display: flex;
-          align-items: center;
-          & img {
-              margin-right: 15px;
-          }
-          & span {
-            font-size: 20px;
-            color: #cacbcc;
-            text-transform: uppercase;
-            font-family: KozGoPro_Bold;
-          }
+      align-items: center;
+      & img {
+        margin-right: 15px;
       }
+      & span {
+        font-size: 20px;
+        color: #cacbcc;
+        text-transform: uppercase;
+        font-family: KozGoPro_Bold;
+      }
+    }
   }
 }
 
 // Company page
 .top-page {
-  background: url(img/top-img.png), linear-gradient(0.25turn, $primary, #dadc55);
+  background: url(../img/top-img.png),
+    linear-gradient(0.25turn, $primary, #dadc55);
   background-repeat: no-repeat;
   background-size: cover;
   height: 200px;
@@ -776,7 +813,7 @@ body {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      
+
       img {
         margin-right: 20px;
         margin-bottom: 40px;
@@ -835,4 +872,126 @@ body {
 // News
 .news_1 {
   margin-bottom: 70px;
+  h1 {
+    font-size: 38px;
+    color: $red-color;
+    font-family: KozGoPro_Bold;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  &-card {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+    img {
+      width: 100%;
+    }
+    &_grey {
+      border-bottom: 3px solid rgb(21, 32, 4);
+    }
+    &_orange {
+      border-bottom: 3px solid #ff5000;
+    }
+    &_red {
+      border-bottom: 3px solid $red-color;
+    }
+    &_yellow {
+      border-bottom: 3px solid rgb(255, 167, 33);
+    }
+    &_primary {
+      border-bottom: 3px solid $primary;
+    }
+    &_green {
+      border-bottom: 3px solid rgb(177, 213, 24);
+    }
+    &__content {
+      padding: 10px 30px 25px 30px;
+      h3 {
+        font-size: 22px;
+        margin-bottom: 15px;
+      }
+      &-icon {
+        display: flex;
+        align-items: center;
+        margin-bottom: 15px;
+        img {
+          width: 23px;
+          margin-right: 15px;
+        }
+        span {
+          font-size: 14px;
+        }
+      }
+      p {
+        font-size: 14px;
+        margin-bottom: 15px;
+      }
+    }
+  }
+  &-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #15202c;
+    margin-bottom: 60px;
+    &_numbers {
+      display: flex;
+      &_active {
+        background-color: $primary !important;
+      }
+      a {
+        margin-right: 15px;
+        color: white;
+        align-items: center;
+        display: flex;
+        padding: 0 12px;
+        background-color: #fff;
+        border-radius: 5px;
+        font-family: KozGoPro_Bold;
+        text-decoration: none;
+        color: #15202c;
+        font-size: 18px;
+      }
+      a:nth-last-child(1) {
+        background-color: transparent;
+      }
+      a:nth-last-child(4) {
+        background-color: transparent;
+      }
+    }
+  }
+  &-content {
+    margin-bottom: 35px;
+    h1 {
+      font-size: 38px;
+      color: $red-color;
+      text-align: center;
+      font-family: KozGoPro_Bold;
+    }
+    &-center {
+     display: flex;
+     justify-content: center;
+      &-item {
+        border: 1px solid rgba(0, 0, 0, 0.4);
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        font-size: 18px;
+        margin-bottom: 20px;
+        h4 {
+          color: $primary;
+          font-family: KozGoPro_Bold;
+          margin-right: 35px;
+        }
+      }
+    }
+    &_btn {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+  }
 }
+
+
