--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -94,4 +94,16 @@
       text-align: center;
     }
   }
+  // Register page
+  .register-form-input {
+    flex-direction: column;
+    align-items: center;
+    label {
+      margin-right: 0 !important;
+    }
+    input {
+      padding: 10px;
+      width: 70% !important;
+    }
+  }
 }
