--- a/scss/style.css
+++ b/scss/style.css
@@ -136,6 +136,22 @@
   .company_1-item2_content-text {
     text-align: center;
   }
+  .register-form-input {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .register-form-input label {
+    margin-right: 0 !important;
+  }
+  .register-form-input input {
+    padding: 10px;
+    width: 70% !important;
+  }
 }
 
 button:focus,
@@ -179,6 +195,7 @@ p {
   text-decoration: none;
   font-size: 16px;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .btn-red {
@@ -1341,12 +1358,24 @@ body {
   font-size: 18px;
 }
 
+.news_1-pagination_numbers a:hover {
+  background-color: #00aced;
+}
+
 .news_1-pagination_numbers a:nth-last-child(1) {
   background-color: transparent;
 }
 
+.news_1-pagination_numbers a:nth-last-child(1):hover {
+  background-color: #00aced;
+}
+
 .news_1-pagination_numbers a:nth-last-child(4) {
   background-color: transparent;
+}
+
+.news_1-pagination_numbers a:nth-last-child(4):hover {
+  background-color: #00aced;
 }
 
 .news_1-content {
@@ -1398,5 +1427,87 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 20px;
+}
+
+.register {
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  padding: 40px;
+  margin-bottom: 100px;
+}
+
+.register h1 {
+  font-family: KozGoPro_Regular;
+  text-align: center;
+  background-color: #ef3139;
+  border-radius: 10px;
+  color: white;
+  margin-bottom: 35px;
+}
+
+.register-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.register-form-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.register-form-input label {
+  font-size: 22px;
+  font-family: KozGoPro_Medium;
+  color: #ef3139;
+  margin-right: 20px;
+}
+
+.register-form-input input {
+  border-radius: 50px;
+  border: 1px solid #a1a1a1;
+  width: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #383838;
+  font-size: 18px;
+}
+
+.register-form-btn {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 35px;
+}
+
+.register-form-btn button {
+  padding: 10px 30px;
+}
+
+.register-form hr {
+  background-color: rgba(0, 0, 0, 0.1);
+  height: 2px;
+  width: 100%;
+  margin-bottom: 35px;
+}
+
+.register-form p {
+  text-align: center;
+  font-size: 24px;
+  font-family: KozGoPro_Medium;
+}
+
+.register-form p a {
+  color: #00aced;
 }
 /*# sourceMappingURL=style.css.map */
