--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,6 +45,7 @@ p {
   text-decoration: none;
   font-size: 16px;
   font-weight: 700;
+  cursor: pointer;
   &-red {
     background-color: $red-color;
     &:hover {
@@ -951,12 +952,21 @@ body {
         text-decoration: none;
         color: #15202c;
         font-size: 18px;
+        &:hover {
+          background-color: $primary;
+        }
       }
       a:nth-last-child(1) {
         background-color: transparent;
+        &:hover {
+          background-color: $primary;
+        }
       }
       a:nth-last-child(4) {
         background-color: transparent;
+        &:hover {
+          background-color: $primary;
+        }
       }
     }
   }
@@ -969,8 +979,8 @@ body {
       font-family: KozGoPro_Bold;
     }
     &-center {
-     display: flex;
-     justify-content: center;
+      display: flex;
+      justify-content: center;
       &-item {
         border: 1px solid rgba(0, 0, 0, 0.4);
         padding: 20px;
@@ -994,4 +1004,64 @@ body {
   }
 }
 
-
+// Register Page
+.register {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  padding: 40px;
+  margin-bottom: 100px;
+  h1 {
+    font-family: KozGoPro_Regular;
+    text-align: center;
+    background-color: $red-color;
+    border-radius: 10px;
+    color: white;
+    margin-bottom: 35px;
+  }
+  &-form {
+    display: flex;
+    flex-direction: column;
+    &-input {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+      label {
+        font-size: 22px;
+        font-family: KozGoPro_Medium;
+        color: $red-color;
+        margin-right: 20px;
+      }
+      input {
+        border-radius: 50px;
+        border: 1px solid rgb(161, 161, 161);
+        width: 50%;
+        padding-left: 20px;
+        padding-right: 20px;
+        color: $text-color;
+        font-size: 18px;
+      }
+    }
+    &-btn {
+      text-align: center;
+      margin-top: 20px;
+      margin-bottom: 35px;
+      button {
+        padding: 10px 30px;
+      }
+    }
+    hr {
+      background-color: rgba(0, 0, 0, 0.1);
+      height: 2px;
+      width: 100%;
+      margin-bottom: 35px;
+    }
+    p {
+      text-align: center;
+      font-size: 24px;
+      font-family: KozGoPro_Medium;
+      a {
+        color: $primary;
+      }
+    }
+  }
+}
