--- a/scss/style.css
+++ b/scss/style.css
@@ -125,10 +125,49 @@
         -ms-flex-align: center;
             align-items: center;
   }
+  .company_1-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .company_1-item img {
+    padding-right: 0 !important;
+    padding-bottom: 0 !important;
+    width: 100%;
+  }
+  .company_1-item-content h1 {
+    text-align: center;
+    margin-top: 25px;
+  }
+  .company_1-item2 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .company_1-item2 h1 {
+    text-align: center;
+  }
   .company_1-item2_content {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .company_1-item2_content img {
+    padding-right: 0;
   }
   .company_1-item2_content-line {
     display: none;
