--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -135,4 +135,20 @@
       width: 70% !important;
     }
   }
+
+}
+
+@media (max-width: 767px) {
+   // Services Page
+   .services1-item-img, .services2-item-img, .services4-item-img, .services6-item-img, .services7-item-img {
+    margin-right: 0 !important;
+    margin-bottom: 40px;
+    img {
+      width: 100%;
+    }
+    &_block {
+      right: 31% !important;
+      top: 87% !important;
+    }
+  }
 }
