--- a/scss/style.css
+++ b/scss/style.css
@@ -193,6 +193,20 @@
   }
 }
 
+@media (max-width: 767px) {
+  .services1-item-img, .services2-item-img, .services4-item-img, .services6-item-img, .services7-item-img {
+    margin-right: 0 !important;
+    margin-bottom: 40px;
+  }
+  .services1-item-img img, .services2-item-img img, .services4-item-img img, .services6-item-img img, .services7-item-img img {
+    width: 100%;
+  }
+  .services1-item-img_block, .services2-item-img_block, .services4-item-img_block, .services6-item-img_block, .services7-item-img_block {
+    right: 31% !important;
+    top: 87% !important;
+  }
+}
+
 button:focus,
 input:focus,
 textarea:focus,
@@ -1548,5 +1562,459 @@ body {
 
 .register-form p a {
   color: #00aced;
+}
+
+.services1 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #b1d518 !important;
+  border: 1px solid #b1d518;
+  margin-bottom: 100px;
+}
+
+.services1-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services1-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services1-item-img_block {
+  background-color: #b1d518;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services1-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #b1d518;
+}
+
+.services1-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services1-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services1-item-content-items_block {
+  background-color: #b1d518;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services1-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services2 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #ef3139 !important;
+  border: 1px solid #ef3139;
+  margin-bottom: 100px;
+}
+
+.services2-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services2-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services2-item-img_block {
+  background-color: #ef3139;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services2-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ef3139;
+}
+
+.services2-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services2-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services2-item-content-items_block {
+  background-color: #ef3139;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services2-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services3 {
+  min-height: 600px;
+  padding: 35px;
+  border-bottom: 3px solid #02b59f !important;
+  border: 1px solid #02b59f;
+  margin-bottom: 100px;
+}
+
+.services3-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.services3-item img:first-child {
+  width: 100%;
+}
+
+.services3-item-img {
+  margin-top: -55px;
+  background-color: #02b59f;
+  padding: 20px 25px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+
+.services3-item h1 {
+  color: #02b59f;
+  font-family: KozGoPro_Bold;
+}
+
+.services3-item h3 {
+  font-family: KozGoPro_Bold;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.services3-item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services3-item-content_block {
+  background-color: #02b59f;
+  padding: 5px 7px;
+  min-width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services3-item-content p {
+  font-family: KozGoPro_Regular;
+}
+
+.services4 {
+  min-height: 500px;
+  padding: 35px;
+  border-bottom: 3px solid #ff5000 !important;
+  border: 1px solid #ff5000;
+  margin-bottom: 100px;
+}
+
+.services4-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services4-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services4-item-img_block {
+  background-color: #ff5000;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services4-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ff5000;
+}
+
+.services4-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services4-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services4-item-content-items_block {
+  background-color: #ff5000;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services4-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services5 {
+  min-height: 600px;
+  padding: 35px;
+  border-bottom: 3px solid #15202c !important;
+  border: 1px solid #15202c;
+  margin-bottom: 100px;
+}
+
+.services5-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.services5-item img:first-child {
+  width: 100%;
+}
+
+.services5-item-img {
+  margin-top: -55px;
+  background-color: #15202c;
+  padding: 20px 25px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+
+.services5-item h1 {
+  color: #15202c;
+  font-family: KozGoPro_Bold;
+}
+
+.services5-item h3 {
+  font-family: KozGoPro_Bold;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.services5-item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services5-item-content_block {
+  background-color: #15202c;
+  padding: 5px 7px;
+  min-width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services5-item-content p {
+  font-family: KozGoPro_Regular;
+}
+
+.services6 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #ffa721 !important;
+  border: 1px solid #ffa721;
+  margin-bottom: 100px;
+}
+
+.services6-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services6-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services6-item-img_block {
+  background-color: #ffa721;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services6-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ffa721;
+}
+
+.services6-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services6-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services6-item-content-items_block {
+  background-color: #ffa721;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services6-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services7 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #02b59f !important;
+  border: 1px solid #02b59f;
+  margin-bottom: 100px;
+}
+
+.services7-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services7-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services7-item-img_block {
+  background-color: #02b59f;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services7-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #02b59f;
+}
+
+.services7-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services7-item-content p {
+  margin-bottom: 15px;
+}
+
+.services7-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services7-item-content-items_block {
+  background-color: #02b59f;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services7-item-content-items p {
+  font-family: KozGoPro_Regular;
 }
 /*# sourceMappingURL=style.css.map */
