--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -168,3 +168,19 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  .guide-cards-img1, .guide-cards-img2, .guide-cards-img3, .guide-cards-img4, .guide-cards-img5, .guide-cards-img6 {
+    &_content {
+      top: 0 !important;
+      padding-left: 20px;
+      padding-right: 20px;
+      &-block {
+        img {
+          width: 100px !important;
+          height: 100px !important;
+        }
+      }
+    }
+  }
+}
