--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -173,7 +173,7 @@
   .guide-cards-img1, .guide-cards-img2, .guide-cards-img3, .guide-cards-img4, .guide-cards-img5, .guide-cards-img6 {
     &_content {
       top: 0 !important;
-      left: 3% !important;
+      left: 5%;
       padding-left: 20px;
       padding-right: 20px;
       &-block {
