--- a/scss/style.css
+++ b/scss/style.css
@@ -227,7 +227,7 @@
 @media (max-width: 400px) {
   .guide-cards-img1_content, .guide-cards-img2_content, .guide-cards-img3_content, .guide-cards-img4_content, .guide-cards-img5_content, .guide-cards-img6_content {
     top: 0 !important;
-    left: 3% !important;
+    left: 5%;
     padding-left: 20px;
     padding-right: 20px;
   }
